--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
       <!-- PAGE ACCUEIL -->
       <div id="page-home" class="page active px-4 py-16 lg:py-24 text-center">
         <h1 class="text-5xl md:text-8xl font-black mb-8 leading-tight">
-          Un seul endroit pour explorer<br><span class="opacity-60 text-3xl md:text-5xl font-light">tous les autres</span>
+          Un seul endroit pour explorer<br><span class="opacity-60 text-3xl md:text-5xl font-light text-white">tous les autres</span>
         </h1>
         <p class="text-xl text-slate-300 max-w-3xl mx-auto mb-12">
             Nova360 transforme votre façon de découvrir des lieux exceptionnels grâce à la visite virtuelle nouvelle génération. Accessible partout, tout le temps.
@@ -311,17 +311,17 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-12 text-left max-w-7xl mx-auto px-4">
             <div class="feature-card p-10 rounded-3xl" onclick="navigateToPage('categories')">
               <div class="text-3xl mb-6">🌍</div>
-              <h3 class="text-xl font-bold mb-3">Visites 360°</h3>
+              <h3 class="text-xl font-bold mb-3 text-white">Visites 360°</h3>
               <p class="text-slate-400 text-sm">Une immersion fluide et interactive pour un réalisme saisissant dans chaque détail.</p>
             </div>
             <div class="feature-card p-10 rounded-3xl">
               <div class="text-3xl mb-6">👥</div>
-              <h3 class="text-xl font-bold mb-3">Multi-secteurs</h3>
+              <h3 class="text-xl font-bold mb-3 text-white">Multi-secteurs</h3>
               <p class="text-slate-400 text-sm">Restaurants, Immobilier, Tourisme ou Commerces : une solution adaptée.</p>
             </div>
             <div class="feature-card p-10 rounded-3xl">
               <div class="text-3xl mb-6">✨</div>
-              <h3 class="text-xl font-bold mb-3">Ultra Rapide</h3>
+              <h3 class="text-xl font-bold mb-3 text-white">Ultra Rapide</h3>
               <p class="text-slate-400 text-sm">Chargement instantané sur mobile et desktop pour ne jamais perdre l'attention.</p>
             </div>
         </div>
@@ -342,10 +342,10 @@
         </div>
       </div>
 
-      <!-- PAGE CATÉGORIES : RESTAURATION DES TEXTES -->
+      <!-- PAGE CATÉGORIES -->
       <div id="page-categories" class="page px-4 py-20 max-w-7xl mx-auto">
         <div class="text-center mb-16">
-            <h2 class="text-4xl md:text-5xl font-black mb-4">Nos Catégories</h2>
+            <h2 class="text-4xl md:text-5xl font-black mb-4 text-white">Nos Catégories</h2>
             <p class="text-slate-400 max-w-2xl mx-auto">Explorez les lieux d'une manière immersive grâce à nos visites virtuelles 360°.</p>
         </div>
         
@@ -353,7 +353,7 @@
             <!-- Restaurant -->
             <div class="feature-card p-10 rounded-[2rem] border-t-8 border-[#278299] group">
               <span class="text-4xl mb-6 block">🍽️</span>
-              <h3 class="text-2xl font-bold mb-4">Restaurants</h3>
+              <h3 class="text-2xl font-bold mb-4 text-white">Restaurants</h3>
               <p class="text-slate-300 text-sm mb-8 leading-relaxed">Faites découvrir l'ambiance de votre établissement en facilitant la découverte, grâce à la visite virtuelle 360° interactive.</p>
               <ul class="text-xs text-slate-400 space-y-3 mb-10 border-t border-white/5 pt-6">
                 <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-[#278299] rounded-full"></span> Coordonnées pour appeler</li>
@@ -366,7 +366,7 @@
             <!-- Activités -->
             <div class="feature-card p-10 rounded-[2rem] border-t-8 border-[#315a97] group">
               <span class="text-4xl mb-6 block">🎯</span>
-              <h3 class="text-2xl font-bold mb-4">Activités</h3>
+              <h3 class="text-2xl font-bold mb-4 text-white">Activités</h3>
               <p class="text-slate-300 text-sm mb-8 leading-relaxed">Proposez une expérience numérique immersive pour valoriser vos espaces de loisirs et captiver votre audience.</p>
               <ul class="text-xs text-slate-400 space-y-3 mb-10 border-t border-white/5 pt-6">
                 <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-[#315a97] rounded-full"></span> Vivez l'expérience comme si vous y étiez</li>
@@ -379,7 +379,7 @@
             <!-- Hébergement -->
             <div class="feature-card p-10 rounded-[2rem] border-t-8 border-[#278299] group">
               <span class="text-4xl mb-6 block">🏡</span>
-              <h3 class="text-2xl font-bold mb-4">Hébergements</h3>
+              <h3 class="text-2xl font-bold mb-4 text-white">Hébergements</h3>
               <p class="text-slate-300 text-sm mb-8 leading-relaxed">Explorez des lieux d'exception pour vos séjours et rassurez vos voyageurs sur le confort et la disposition des lieux.</p>
               <ul class="text-xs text-slate-400 space-y-3 mb-10 border-t border-white/5 pt-6">
                 <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-[#278299] rounded-full"></span> Visite "comme à la maison"</li>
@@ -391,7 +391,7 @@
             <!-- Shopping -->
             <div class="feature-card p-10 rounded-[2rem] border-t-8 border-[#315a97] group">
               <span class="text-4xl mb-6 block">🛍️</span>
-              <h3 class="text-2xl font-bold mb-4">Shopping</h3>
+              <h3 class="text-2xl font-bold mb-4 text-white">Shopping</h3>
               <p class="text-slate-300 text-sm mb-8 leading-relaxed">Transformez votre boutique physique en un showroom digital accessible 24h/24 et 7j/7.</p>
               <ul class="text-xs text-slate-400 space-y-3 mb-10 border-t border-white/5 pt-6">
                 <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-[#315a97] rounded-full"></span> Tags produits interactifs</li>
@@ -403,7 +403,7 @@
             <!-- Professionnels -->
             <div class="feature-card p-10 rounded-[2rem] border-t-8 border-[#278299] group">
               <span class="text-4xl mb-6 block">💼</span>
-              <h3 class="text-2xl font-bold mb-4">Professionnels</h3>
+              <h3 class="text-2xl font-bold mb-4 text-white">Professionnels</h3>
               <p class="text-slate-300 text-sm mb-8 leading-relaxed">Valorisez vos bureaux, showrooms et espaces industriels pour vos clients et futurs collaborateurs.</p>
               <ul class="text-xs text-slate-400 space-y-3 mb-10 border-t border-white/5 pt-6">
                 <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-[#278299] rounded-full"></span> Espaces de travail</li>
@@ -413,13 +413,13 @@
             </div>
 
             <!-- Tourisme -->
-            <div class="feature-card p-10 rounded-[2rem] border-t-8 border-white group">
-              <span class="text-4xl mb-6 block">🗺️</span>
-              <h3 class="text-2xl font-bold mb-4">Tourisme</h3>
+            <div class="feature-card p-10 rounded-[2rem] border-t-8 border-[#315a97] group">
+              <span class="text-4xl mb-6 block text-white">🗺️</span>
+              <h3 class="text-2xl font-bold mb-4 text-white">Tourisme</h3>
               <p class="text-slate-300 text-sm mb-8 leading-relaxed">Valorisez le patrimoine culturel et les sites naturels pour attirer les visiteurs du monde entier.</p>
               <ul class="text-xs text-slate-400 space-y-3 mb-10 border-t border-white/5 pt-6">
-                <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-white rounded-full"></span> Valorisation patrimoine</li>
-                <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-white rounded-full"></span> Exploration libre</li>
+                <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-[#315a97] rounded-full"></span> Valorisation patrimoine</li>
+                <li class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-[#315a97] rounded-full"></span> Exploration libre</li>
               </ul>
               <button class="card-action-button py-5 rounded-2xl mt-auto font-bold text-xs" onclick="window.open('https://nova360.app.codinsight.app/?category=tourisme', '_blank')">VISITER LA CATÉGORIE</button>
             </div>
@@ -428,7 +428,7 @@
 
       <!-- PAGE SHOWROOM -->
       <div id="page-demo" class="page overflow-hidden">
-        <aside class="demo-sidebar">
+        <aside class="demo-sidebar text-white">
           <h4 class="text-white font-black text-xs uppercase tracking-widest mb-6 opacity-60">Showroom Virtuel</h4>
           <nav>
             <button onclick="changeDemo('https://filedn.eu/ltnoVzjomRBHzYirJIqOwRu/NovaVisio/Restaurants/11100%20-%20Narbonne%20-%20Samigiri/index.html', this)" class="demo-item-btn active"><span>🍽️</span> Restaurants</button>
@@ -446,10 +446,10 @@
         </div>
       </div>
 
-      <!-- PAGE VISION : RESTAURATION DES ONGLETS BLEUS -->
+      <!-- PAGE VISION -->
       <div id="page-about" class="page px-4 py-20 max-w-5xl mx-auto">
         <div class="bg-white/5 p-12 rounded-[3rem] border border-white/10 relative overflow-hidden">
-            <h2 class="text-4xl font-black mb-8 text-center">À propos de Nova360</h2>
+            <h2 class="text-4xl font-black mb-8 text-center text-white">À propos de Nova360</h2>
             <div class="space-y-8 text-slate-300 text-lg leading-relaxed text-center">
               <p><strong>Nova360</strong> est une plateforme immersive de référence conçue pour mettre en lumière le dynamisme de votre secteur. Notre mission est d'augmenter la visibilité des <strong>entreprises</strong>, des <strong>particuliers</strong> et des <strong>professionnels</strong> à travers une expérience numérique d'exception.</p>
               
@@ -478,7 +478,7 @@
       <!-- PAGE CONTACT -->
       <div id="page-contact" class="page px-4 py-20 max-w-xl mx-auto text-center space-y-12">
         <div class="space-y-4">
-            <h2 class="text-5xl font-black italic">Un projet ?</h2>
+            <h2 class="text-5xl font-black text-white italic">Un projet ?</h2>
             <h3 class="text-2xl font-bold text-white mb-2">Vous voulez rejoindre Nova360 ?</h3>
             <p class="text-xl text-[#278299] font-bold">Augmentez votre visibilité grâce à la visite virtuelle interactive de Nova360.</p>
         </div>
@@ -496,14 +496,14 @@
             <label class="block text-[10px] uppercase font-bold text-slate-400 mb-2">Message</label>
             <textarea rows="4" placeholder="Décrivez votre besoin..." required class="w-full px-6 py-4 bg-[#004047] border border-white/10 rounded-2xl text-white outline-none focus:border-[#278299]"></textarea>
           </div>
-          <button type="submit" class="cta-button w-full py-6 rounded-2xl text-white font-black text-lg uppercase tracking-widest">Envoyer la demande</button>
+          <button type="submit" class="cta-button w-full py-6 rounded-2xl text-white font-black text-lg uppercase tracking-widest shadow-xl">Envoyer la demande</button>
           <div id="form-feedback" class="hidden text-center text-[#278299] font-black p-4 bg-white/5 rounded-2xl">✓ Message transmis avec succès !</div>
         </form>
 
         <!-- QR SECTION -->
         <div class="bg-white/5 p-10 rounded-[3rem] border border-white/10 flex flex-col md:flex-row items-center justify-between gap-8 mt-20">
             <div class="text-left space-y-2">
-                <h4 class="text-2xl font-black">Emportez l'expérience</h4>
+                <h4 class="text-2xl font-black text-white">Emportez l'expérience</h4>
                 <p class="text-sm text-slate-400">Scannez ce QR Code pour ouvrir l'application sur smartphone.</p>
             </div>
             <div class="p-4 bg-white rounded-3xl shadow-xl">
