Fix typo in showroom section and update closing tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        1. Navigation : Menu fixe avec effet de flou et menu mobile réactif.
        2. Accueil : Impact fort, CTA directs et carrousel de partenaires.
        3. Catégories : Restauration des descriptions riches et des listes de bénéfices par secteur.
-       4. Showroom (Démo) : Barre latérale fixe et châssis de visualisation.
+       4. Démonstations (Démo) : Barre latérale fixe et châssis de visualisation.
        5. À propos : Restauration des 4 onglets thématiques (Vision originale).
        6. Engagement : Formulaire de contact complet et section QR Code.
   -->
